# smartfridge

./: .gitignore  README.md  pyproject.toml  run_tracking.py  run_tracking_parallel.py
smartfridge/: __init__.py  frame_processor.py  outputs.py  pipeline.py
smartfridge/cfg/: default.yaml
smartfridge/cfg/trackers/: hybridsort.yaml
smartfridge/core/: config.py  inference.py  profiler.py  types.py
smartfridge/counter/: __init__.py  geometry.py  line_crossing.py  multi_line_crossing.py  product.py
smartfridge/mediapipe/: hand_detector.py
smartfridge/renderer/: __init__.py  line_crossing.py  multi_line_crossing.py  overlay.py
smartfridge/trackers/: __init__.py  hybrid_sort_tracker.py
smartfridge/trackers/hybrid_sort/: hybrid_sort.py
smartfridge/trackers/utils/: __init__.py  class_reid.py  iou.py  spatial_reid.py
